# Gestao-de-Horarios-AED

./: CMakeLists.txt  Doxyfile  README.md  estrutura  main.cpp  menu.cpp  menu.h  menus.cpp  menus.h
.github/workflows/: build_documentation.yml
Bugs/: bug_escolha_turmas
Classes/: Aula.cpp  Aula.h  BST.h  Class.cpp  Class.h  Comparators.cpp  CourseUnit.cpp  CourseUnit.h  Dados.cpp  Dados.h  Enrollment.cpp  Enrollment.h  Estudante.cpp  Estudante.h  Horario.cpp  Horario.h  Inscricao.cpp  Inscricao.h  Lecture.cpp  Lecture.h  Managing.cpp  Managing.h  Request.cpp  Request.h  Schedule.cpp  Schedule.h  Slot.cpp  Slot.h  Student.cpp  Student.h  Turma.cpp  Turma.h
Data/: rejected_requests.csv  requests.csv  students_classes.csv  test.csv
Examples/: .~lock.students_classes.csv#
docs/html/: Comparators_8cpp.html  Comparators_8cpp__dep__incl.map  Comparators_8cpp__dep__incl.md5  Comparators_8cpp__incl.map  Comparators_8cpp__incl.md5  CourseUnit_8cpp.html  CourseUnit_8cpp__incl.map  CourseUnit_8cpp__incl.md5  CourseUnit_8h.html  CourseUnit_8h__dep__incl.map  CourseUnit_8h__dep__incl.md5  CourseUnit_8h__incl.map  CourseUnit_8h__incl.md5  CourseUnit_8h_source.html  Managing_8cpp.html  Managing_8cpp__incl.map  Managing_8cpp__incl.md5  Managing_8h.html  Managing_8h__dep__incl.map  Managing_8h__dep__incl.md5  Managing_8h__incl.map  Managing_8h__incl.md5  Managing_8h_source.html  README_8md.html  Request_8cpp.html  Request_8cpp__incl.map  Request_8cpp__incl.md5  Request_8h.html  Request_8h__dep__incl.map  Request_8h__dep__incl.md5  Request_8h__incl.map  Request_8h__incl.md5  Request_8h_source.html  Schedule_8cpp.html  Schedule_8cpp__incl.map  Schedule_8cpp__incl.md5  Schedule_8h.html  (+144 more)
(+64 files in other folders)
